Added nginx dockerfile, config file

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,3 +19,10 @@ services:
       - db
     volumes:
       - .:/app  
+  nginx:
+    image: nginx:0.1
+    # container_name: nginx-ser
+    ports:
+      - 80:80
+    links:
+      - web
