--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,7 @@ services:
     command: /bin/sh -c "rm -f tmp/pids/server.pid && bundle exec rails s -p 3000 -b '0.0.0.0'"
     ports:
       - "3000:3000"
-    links:
+    depends_on:
       - db
     volumes:
       - .:/app  
@@ -24,5 +24,5 @@ services:
     # container_name: nginx-ser
     ports:
       - 80:80
-    links:
+    depends_on:
       - web
