Changed people controller, updated docker file for gems

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,14 +13,15 @@ services:
     build: .
     # command: bin/rails server -p 3000 --binding 0.0.0.0
     command: /bin/sh -c "rm -f tmp/pids/server.pid && bundle exec rails s -p 3000 -b '0.0.0.0'"
+    # command: bundle exec rails s -p 3000 -b 0.0.0.0
     ports:
       - "3000:3000"
     depends_on:
       - db
-    volumes:
-      - .:/app  
+    # volumes:
+    #   - .:/app
   # nginx:
-  #   image: nginx:0.1
+  #   image: nginx:1.0
   #   # container_name: nginx-ser
   #   ports:
   #     - 80:80
